# gerbertools

./: .gitignore  GerberBackend.csproj  GerberBackend.http  GerberBackend.sln  Program.cs  appsettings.Development.json  output.gltf
Cdek/: CdekOrder.cs
Config/: CustomClaimTypes.cs
Contracts/: IGzipData.cs
Controllers/: AuthController.cs  CdecController.cs  Gerber3DModelController.cs  GerberController.cs  LoggerController.cs  SessionFilesController.cs
Core/Contracts/: IAuthService.cs  ILogger.cs  ISessionStore.cs  StaticUserRoles.cs
Core/DbContext/: ApplicationContext.cs  DbInitializer.cs
Core/Dtos/Auth/: LoginDto.cs  LoginServiceResponseDto.cs  MeDto.cs  RegisterDto.cs  UpdateRoleDto.cs  UserInfoResult.cs  UserInfoResultDto.cs
Core/Dtos/General/: GeneralServiceResponseDto.cs
Core/Dtos/Gerber/: GerberAddDto.cs  GerberServiceResponseCompressedListDto.cs  GerberServiceResponseFullListDto.cs
Core/Entities/Auth/: ApplicationUser.cs  BaseEntity.cs  Log.cs
Core/Entities/Gerber/: BoardWindow.cs  BuildTime.cs  Connectors.cs  Count.cs  Lamellas.cs  Order.cs  OrderGerber.cs  Price.cs  Quantity.cs  Size.cs  Status.cs
Core/Entities/Gerber/Base/: BaseGerber.cs
Core/Entities/Gerber/Elements/: AngleChamfer.cs  BaseMaterial.cs  BoardThickness.cs  ContourMachining.cs  DataNumbering.cs  DrillFile.cs  EdgeConnectors.cs  FoilThickness.cs  GerberFileBinary.cs  Layer.cs  MainSites.cs  MarkingColor.cs  MarkingSide.cs  MaskColor.cs  MaskSide.cs  MaskType.cs  MinimalConductor.cs  Vias.cs
Core/Entities/UserStoreCustom/: UserStoreCustom.cs
Core/Enums/: RoleType.cs
Core/MongoDB/: DBMongoInitializer.cs
Core/MongoDB/Entities/: ErrorLogClient.cs  ErrorLogServer.cs  UserAction.cs
Core/Services/: AuthService.cs  LoggerService.cs
Core/Session/: MemorySessionStore.cs
GerberBackendMake/: CMakeLists.txt
GerberBackendMake/gerbertools/include/gerbertools/: aperture.hpp  aperture_macro.hpp  coord.hpp  earcut.hpp  gerber.hpp  ncdrill.hpp  netlist.hpp  obj.hpp  path.hpp  pcb.hpp  plot.hpp  svg.hpp
GerberBackendMake/gerbertools/src/: aperture.cpp  aperture_macro.cpp  clipper.cpp  coord.cpp  gerber.cpp  ncdrill.cpp  netlist.cpp  obj.cpp  path.cpp  pcb.cpp  plot.cpp  pymod.cpp  svg.cpp
GerberBackendMake/src/: BoardEnumTypes.h  GerberToolsClient.cpp  GerberToolsServer.cpp  GerberToolsWrapper.cpp  ProcessingContext.cpp  color_utils.hpp  platform.h
Migrations/: 20240716113136_Init.Designer.cs  20240716113136_Init.cs  ApplicationContextModelSnapshot.cs
Properties/: launchSettings.json
Session/: a181b2f9-a720-42b2-952c-ba8cd469c030
Utils/: GZipData.cs  PInvokeWrapper.cs  SessionToken.cs
